# OOPSZI_Lab3

./: CMakeLists.txt  README.md
src/: a.c  do_while_findFirstElement.c  do_while_findFirstNegativeElement.c  do_while_main.c  do_while_print.c  do_while_summ.c  do_while_summ2.c  for_findFirstElement.c  for_findFirstNegativeElement.c  for_print.c  for_summ.c  for_summ2.c  while_findFirstElement.c  while_findFirstNegativeElement.c  while_main.c  while_print.c  while_summ.c  while_summ2.c
