cmake_minimum_required(VERSION 2.8)

add_executable(For src/for_main.c src/for_findFirstElement.c src/for_findFirstNegativeElement.c src/for_print.c src/for_summ.c src/for_summ2.c)
add_executable(While src/for_main.c src/while_findFirstElement.c src/while_findFirstNegativeElement.c src/while_print.c src/while_summ.c src/while_summ2.c)
add_executable(Do_While src/do_while_main.c src/do_while_findFirstElement.c src/do_while_findFirstNegativeElement.c src/do_while_print.c src/do_while_summ.c src/do_while_summ2.c)